[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "candl-like"
authors = [
{name = "S. Günther"},
]

readme = "README.rst"
license = {file = "LICENCE.txt"}

dynamic = ["version", "description"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
"numpy == 1.24.3",
"jax == 0.4.24",
"jaxlib == 0.4.24",
"gpjax == 0.8.2",
"tqdm == 4.66.4",
"fasteners == 0.19",
"emcee == 3.1.6",
]

[project.optional-dependencies]
docs = [
"sphinx==6.2.1",
"sphinx-collapse==0.1.2",
"sphinx-book-theme==1.0.1",
"numpydoc==1.6.0",
"myst-parser==2.0.0",
"numpy",
]

[tool.flit.module]
name = "OLE"

[project.urls]
Source = "https://github.com/svenguenther/OLE"
