[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "OLE"
authors = [
{name = "S. Günther"},
]

readme = "README.rst"
license = {file = "LICENCE.txt"}

dynamic = ["version", "description"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
"numpy",
"jax",
"jaxlib",
"tqdm",
"gpjax == 0.9.1",
"scipy",
"pytreeclass",
"jaxtyping",
"fasteners",
"emcee",
"matplotlib",
"scikit-learn",
]

[project.optional-dependencies]
docs = [
"sphinx==6.2.1",
"sphinx-collapse==0.1.2",
"sphinx-book-theme==1.0.1",
"numpydoc==1.6.0",
"myst-parser==2.0.0",
"numpy",
"matplotlib"
]

[tool.flit.module]
name = "OLE"

[project.urls]
Source = "https://github.com/svenguenther/OLE"
